--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-server.port=8080
+java-filmorate:
+  title: "java-filmorate"
+  logging:
+        level:
+            org:
+                zalando:
+                    logbook: TRACE
