--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,2 @@
-java-filmorate:
-  title: "java-filmorate"
-  logging:
-        level:
-            org:
-                zalando:
-                    logbook: TRACE
+
+  logging.level.org.zalando.logbook: TRACE
